Thu Jan 15 03:44:28 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/SQL/CUTS-create.sql:
        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Database.cs:
        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/NewUserProfile.cs:
        * utils/BMW/website/BMW.master:
        * utils/BMW/website/admin/createuser.aspx:
        * utils/BMW/website/admin/createuser.aspx.cs:

          . Switched the username to an email address.

Mon Jan 12 05:41:15 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.cpp:

          . Updated the parser to support add-ons.

        * MDE/naomi/GME/GNC_App.h:
        * MDE/naomi/GME/GNC_App.cpp:

          . Auto auto-ons for the project is enabled by default. The disable
            auto add-on support, then use the --disable-addons command-line
            parameter.

        * examples/PICML/AntiSPAM/AntiSPAM.xme:

          . Checkpointing the model.

Sun Jan 11 03:45:54 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_db_sqlite3.mpb:
        * cuts/utils/Property_Parser.h:
        * cuts/utils/Property_Parser.cpp:
        * cuts/utils/template/Template_App.cpp:

          . Fixed build errors on non-Windows systems.

Sat Jan 10 21:33:35 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Exec_Header_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Exec_Header_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Exec_Source_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Exec_Source_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/EISA/Header_Generator.cpp:

          . Updated the EISA code generator to the latest version
            of CUTS.

        * MPC/config/cuts_test_database.mpb:
