@@ -1,4 +1,8 @@
-Thu Jan 15 03:44:28 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+Thu Jan 15 04:12:33 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * install/BMW.wxs:
+
+          . Updated the installer for the latest version of the BMW.
 
         * utils/BMW/SQL/CUTS-create.sql:
         * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Database.cs:
